TreeAnalysis/Plot/Plot_before271014/CR2P2F_sigINstate+bkg_data.txt
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_CR2P2F/TTGJets.root therefore preventing schema evolution when reading this file.
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../ZZjjAnalyzer_CR2P2F/DYJetsToLLTuneZ2M10.root therefore preventing schema evolution when reading this file.
Info in <TCanvas::Print>: file Stack_CR2P2F_data_sigINstate+bkg.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_CR2P2F_data_sigINstate+bkg.root has been created
Info in <TCanvas::Print>: pdf file Stack_CR2P2F_data_sigINstate+bkg.pdf has been created

FAKE RATE DENTRO IL MODULO---------->  6.02253439499 


FAKE RATE NEL MAIN--------->  data driven. Total number of irreducible background events:  6.02253441006 


######### MonteCarlo samples #########

WWZJets .......................... 0.000259930630591
ZZZJets .......................... 6.66305493837e-05
WWWJets .......................... 4.57405341194e-05
WZ .......................... 0.00519785212106
TTTo2L2Nu2B .......................... 0.116367894314
TTZJets .......................... 0.00313402951542
TTWJets .......................... 0.000921293873034
TTWWJets .......................... 1.85940391848e-05
TTGJets  has no enetries or is a zombie
DYJetsToLLTuneZ2M50 .......................... 2.07988404616
DYJetsToLLTuneZ2M10  has no enetries or is a zombie
WH126 .......................... 2.67439449608e-06
ZH126 .......................... 9.82894148027e-06
ttH126 .......................... 1.14760549086e-05
ZZTo2e2mu .......................... 0.000481636791423
ZZTo2e2muJJ_SMHContinInterf_H125.6 .......................... 2.79922066832e-05
ZZTo4eJJ_SMHContinInterf_H125.6 .......................... 1.38276203923e-05
ZZTo4e .......................... 0.000291843325073
ZZTo4mu .......................... 0.000258184857341
ZZTo4muJJ_SMHContinInterf_H125.6 .......................... 1.74527934759e-05
ggTo2e2mu_SMHContinInterf-MCFM67_H125.6 .......................... 3.24103982563e-05
ggTo4e_SMHContinInterf-MCFM67_H125.6 .......................... 1.98215064784e-05
ggTo4mu_SMHContinInterf-MCFM67_H125.6 .......................... 1.86466039072e-05

######### Data #########

DoubleMu .......................... 1.34022276674
DoubleEle .......................... 1.13437996386
MuEG .......................... 0.0347230090993
digit anything you want to end the script 
Traceback (most recent call last):
  File "../python/StackPlot_func.py", line 256, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
